[gd_scene load_steps=27 format=3 uid="uid://bqv54e7y1x2k4"]

[ext_resource type="Texture2D" uid="uid://7gghgay3tggt" path="res://Assets/Images/GUI/Inventory.png" id="1_5m0hm"]
[ext_resource type="Theme" uid="uid://ckcd8vghlpx5w" path="res://Assets/Styles/UI.tres" id="1_fsyni"]
[ext_resource type="Script" path="res://Scripts/GUI/inventory_.gd" id="1_yqtla"]
[ext_resource type="Script" path="res://Scripts/GUI/Equiped.gd" id="3_8d6rt"]
[ext_resource type="Script" path="res://Scripts/GUI/GridBackPack.gd" id="3_t4cox"]
[ext_resource type="Script" path="res://Scripts/GUI/BeltSlot_1.gd" id="4_q1i7o"]
[ext_resource type="Script" path="res://Scripts/GUI/BeltSlot_2.gd" id="5_v4p7q"]
[ext_resource type="Script" path="res://Scripts/GUI/BeltSlot_3.gd" id="6_pslms"]
[ext_resource type="Script" path="res://Scripts/GUI/BeltSlot_4.gd" id="7_rtr2n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y4nax"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57cyi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f081k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1oce"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gmtby"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jsk2x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i7oy7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o6kl2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f68uy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_anro4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3tcd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_76ybb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s65o3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n6gji"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uc7wo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rodi0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_id666"]

[node name="Inventory_" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_fsyni")
script = ExtResource("1_yqtla")

[node name="Slot" type="Sprite2D" parent="."]
texture = ExtResource("1_5m0hm")

[node name="Base" type="Panel" parent="."]
layout_mode = 0
offset_left = -96.0
offset_top = -93.0
offset_right = 96.0
offset_bottom = 94.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_y4nax")

[node name="Base_Grid" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = -14.0
offset_right = 80.0
offset_bottom = 86.0
stretch_mode = 2
script = ExtResource("3_t4cox")

[node name="Equiped" type="Panel" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = -83.5
offset_right = 20.0
offset_bottom = -23.5
theme_override_styles/panel = SubResource("StyleBoxEmpty_57cyi")
script = ExtResource("3_8d6rt")

[node name="WEAPON" type="Panel" parent="Equiped"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_f081k")

[node name="SHIELD" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 80.0
offset_right = 100.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_u1oce")

[node name="CHEST" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 40.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_gmtby")

[node name="HEAD" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 40.0
offset_right = 60.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_jsk2x")

[node name="RING_1" type="Panel" parent="Equiped"]
layout_mode = 0
offset_top = 40.0
offset_right = 20.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_i7oy7")

[node name="RING_2" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_i7oy7")

[node name="GLOVES" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_i7oy7")

[node name="FETISH" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 80.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_o6kl2")

[node name="FEET" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 60.0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_o6kl2")

[node name="BELT" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 60.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_o6kl2")

[node name="NECKLACE_1" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 20.0
offset_right = 40.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_f68uy")

[node name="NECKLACE_2" type="Panel" parent="Equiped"]
layout_mode = 0
offset_left = 60.0
offset_right = 80.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_f68uy")

[node name="BeltSlot_1" type="Panel" parent="."]
layout_mode = 0
offset_left = -49.0
offset_top = 99.0
offset_right = -29.0
offset_bottom = 119.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_anro4")
script = ExtResource("4_q1i7o")

[node name="Slot_Belt" type="Panel" parent="BeltSlot_1"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_o3tcd")

[node name="BeltSlot_2" type="Panel" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = 99.0
offset_right = -9.0
offset_bottom = 119.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_76ybb")
script = ExtResource("5_v4p7q")

[node name="Slot_Belt" type="Panel" parent="BeltSlot_2"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_s65o3")

[node name="BeltSlot_3" type="Panel" parent="."]
layout_mode = 0
offset_left = -9.0
offset_top = 99.0
offset_right = 11.0
offset_bottom = 119.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_n6gji")
script = ExtResource("6_pslms")

[node name="Slot_Belt" type="Panel" parent="BeltSlot_3"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_uc7wo")

[node name="BeltSlot_4" type="Panel" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 99.0
offset_right = 31.0
offset_bottom = 119.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_rodi0")
script = ExtResource("7_rtr2n")

[node name="Slot_Belt" type="Panel" parent="BeltSlot_4"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_id666")

[node name="Item_Info" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = -83.0
offset_right = 160.0
offset_bottom = 65.0
scale = Vector2(0.4, 0.4)
expand_mode = 1

[node name="Item_Name" type="Label" parent="Item_Info"]
layout_mode = 0
offset_top = 3.0
offset_right = 135.0
offset_bottom = 60.0
autowrap_mode = 3

[node name="Rarity" type="Label" parent="Item_Info"]
layout_mode = 0
offset_left = 1.0
offset_top = 63.0
offset_right = 133.0
offset_bottom = 85.0

[node name="Attribute_1" type="Label" parent="Item_Info"]
layout_mode = 0
offset_left = 1.0
offset_top = 85.0
offset_right = 135.0
offset_bottom = 147.0
